<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/page_title"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_marginBottom="5dp"
        />
    <ImageView
        android:id="@+id/app_logo"
        android:contentDescription="@string/simple_app_logo_showing_different_layouts"
        android:layout_below="@+id/topAppBar"
        android:layout_width="wrap_content"
        android:layout_height="226dp"
        android:src="@drawable/remarkable_layout"
        android:layout_marginBottom="50dp"/>
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/person"
        android:id="@+id/firstField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:layout_below="@+id/app_logo"
        android:layout_marginBottom="15dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/personName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_below="@+id/firstField"
        android:id="@+id/spacer0"
        android:layout_width="30dp"
        android:layout_height="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/password"
        android:id="@+id/secondField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label2"
        android:layout_below="@+id/spacer0"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/passWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_marginStart="100dp"
        android:layout_below="@+id/secondField"
        android:id="@+id/textButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
    <Space
        android:layout_toEndOf="@+id/textButton"
        android:id="@+id/spacer"
        android:layout_width="30dp"
        android:layout_height="10dp"
        />
    <Button
        android:layout_toEndOf="@+id/spacer"
        android:layout_below="@+id/secondField"
        android:id="@+id/textButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />
</RelativeLayout>